@@ -4,6 +4,8 @@ Mon Oct  8 14:46:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 	not filter out mesh.outerVertex so that current check can also
 	prevent removing a non-boundary edge for which both endpoints are
 	on boundary.
+	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (canCollapse): Fix
+	method to also work for non-manifold meshes.
 
 Sat Oct  6 21:21:08 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
